# wild-horses

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/hooks/: validate-plugin.sh
.cursor-plugin/: marketplace.json
.github/workflows/: publish-plan-keeper.yml
docs/: groundcrew-workflow.md  sdlc-workflow.md
docs/agents/: issue-tracker.md  triage-labels.md
docs/codepaths/: architecture.html  architecture.json  codepaths.json
docs/exec-plans/active/: 2026-04-07-consolidate-harness-plugins.md  2026-04-09-reasoning-gaps-ralph-loop.md  2026-04-14-reasoning-gaps-getattr-rules.md
plugins/autonomous/: README.md
plugins/autonomous/.claude-plugin/: plugin.json
plugins/autonomous/.cursor-plugin/: plugin.json
plugins/cleanup-worktrees/: README.md
plugins/cleanup-worktrees/.claude-plugin/: plugin.json
plugins/cleanup-worktrees/.cursor-plugin/: plugin.json
plugins/cleanup-worktrees/hooks/: cursor-hooks.json  hooks.json
plugins/cleanup-worktrees/scripts/: cleanup-worktrees-cli-allow.sh  cleanup_worktrees_cli.py  test_cleanup_worktrees_cli.py
plugins/codepath-visualizer/: CLAUDE.md  README.md  codepaths-schema.md
plugins/codepath-visualizer/.claude-plugin/: plugin.json
plugins/codepath-visualizer/.cursor-plugin/: plugin.json
plugins/codepath-visualizer/scripts/: codepaths-cli-allow.sh
plugins/groundcrew-setup/: README.md
plugins/groundcrew-setup/.claude-plugin/: plugin.json
plugins/groundcrew-setup/commands/: clearance.md  safehouse.md  setup.md
plugins/groundcrew-setup/scripts/: compose_initial_prompt.py  detect_installed_skills.py  detect_installed_skills.sh  discover_clearance_setup.py  discover_clearance_setup.sh  discover_existing_config.py  discover_existing_config.sh  discover_repos.py  discover_repos.sh  discover_safehouse_setup.py  install_groundcrew.py  install_safehouse.py  load_existing.py  load_existing.sh  render_clearance_env.py  render_clearance_hosts.py  render_config.py  render_safehouse_env.py  test_compose_initial_prompt.py  test_detect_installed_skills.py  test_discover_clearance_setup.py  test_discover_existing_config.py  test_discover_repos.py  test_discover_safehouse_setup.py  test_e2e_dry_run.py  test_install_groundcrew.py  test_install_safehouse.py  test_load_existing.py  test_render_clearance_env.py  test_render_clearance_hosts.py  test_render_config.py  test_render_safehouse_env.py
plugins/groundcrew-setup/tests/: test_compose_initial_prompt.py  test_detect_installed_skills.py  test_discover_clearance_setup.py  test_discover_existing_config.py  test_discover_repos.py  test_discover_safehouse_setup.py  test_e2e_dry_run.py  test_install_groundcrew.py  test_install_safehouse.py  test_load_existing.py  test_render_clearance_env.py  test_render_clearance_hosts.py  test_render_config.py  test_render_safehouse_env.py
plugins/harness/: README.md  flag-gated-rewrite.md  loop-protocol.md  option-e-mechanics.md  rule-checklist.md  shape-options.md  task-list-schema.md  verdict-template.md
plugins/harness-review/.claude-plugin/: plugin.json
plugins/harness-setup/.claude-plugin/: plugin.json
plugins/harness/.claude-plugin/: plugin.json
plugins/harness/.cursor-plugin/: plugin.json
plugins/harness/commands/: audit.md  (+5 more)
plugins/linting-hooks/: README.md
plugins/marketplace/: README.md
plugins/plan-keeper/: README.md  RELEASING.md  global-config.md  plan-kinds.md  repo-derivation.md  ticket-systems.md
plugins/plan-keeper/scripts/: plan-keeper-cli-allow.sh  plan_keeper_cli.py  pyproject.toml  refresh_worktree_cli.py  test_plan_keeper_cli.py
plugins/plan-keeper/scripts/plan_keeper/: __init__.py  cli.py  config.py  crew_install.py  dates.py  errors.py  frontmatter.py  global_config.py  groundcrew.py  http.py  ids.py  jira.py  linear.py  naming.py  push.py  roots.py  storage.py  types.py  upgrade.py
plugins/plan-keeper/scripts/tests/: support.py  test_cli.py  test_config.py  test_crew_install.py  test_frontmatter.py  test_global_config.py  test_groundcrew.py  test_hook.py  test_ids.py  test_jira.py  test_linear.py  test_naming.py  test_push.py  test_refresh.py  test_repo_alias.py  test_repo_alias_cli.py  test_roots.py  test_storage.py  test_upgrade.py
plugins/pyright/: README.md  bugs.md  libraries.md  reference.md  rules.md  suggestions.md  task-list-templates.md
plugins/refactor/: README.md  loop-protocol.md  task-list-schema.md
plugins/steelman/: README.md
plugins/update-git-repos/: README.md
plugins/wild-pr/: README.md
plugins/wrangle/: README.md
(+204 files in other folders)
