# Packaging manifest for the standalone `plan-keeper` CLI.
#
# This is the SAME file the plan-keeper plugin invokes in-place as
# `python3 .../plan_keeper_cli.py`. Variant-B dual-home: one physical source,
# two delivery vehicles. The plugin keeps calling the script by path; Homebrew
# builds this directory into the `plan-keeper` binary. There is no second copy
# to drift — both entry points read and write the same ~/plans/<repo>/ tree.
#
# Build/install locally:  python3 -m pip install .
# (zero third-party deps — pure stdlib, so there are no [project] dependencies)

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "plan-keeper"
# Version is the single `__version__` attribute in plan_keeper/__init__.py (read
# dynamically below), kept in lockstep with plugins/plan-keeper/.claude-plugin/
# plugin.json. The release tag is `plan-keeper-v<version>`.
dynamic = ["version"]
description = "I/O backend for the plan-keeper skills — organize markdown plans in ~/plans/<repo>/ and push them to Linear/Jira."
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Paul Baranowski" }]
keywords = ["cli", "plans", "planning", "linear", "jira", "frontmatter"]
classifiers = [
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/paulbaranowski/wild-horses"
Source = "https://github.com/paulbaranowski/wild-horses/tree/main/plugins/plan-keeper"

[project.scripts]
# `pk` is the primary typed command; `plan-keeper` stays as an equivalent alias
# (same entry point). The brew formula/package name is unchanged — one package,
# two installed binaries.
pk = "plan_keeper.cli:main"
plan-keeper = "plan_keeper.cli:main"

[tool.setuptools]
# Two delivery vehicles, one source tree. `plan_keeper_cli` is the thin entry
# shim the plugin invokes in-place by path (its filename is load-bearing for
# the PreToolUse allow-hook); `plan_keeper` is the implementation package the
# console script and the shim both import. The in-plugin invocation path is
# unchanged.
py-modules = ["plan_keeper_cli"]
packages = ["plan_keeper"]

[tool.setuptools.dynamic]
# Single source of truth: plan_keeper/__init__.__version__, kept in lockstep
# with plugins/plan-keeper/.claude-plugin/plugin.json. Release tag:
# `plan-keeper-v<version>`.
version = { attr = "plan_keeper.__version__" }
